flexbox bug removed

--- a/src/App.sass
+++ b/src/App.sass
@@ -116,7 +116,6 @@ nav
 
 .logoSubContainer
   display: flex
-  justify-content: start
   align-items: start
 
 .logoLetterOutlineC
@@ -234,7 +233,7 @@ ul
 
 .menuToggleContainer
   display: flex
-  justify-content: right
+  justify-content: flex-end
   align-items: center
   margin-right: 4.3rem
 
@@ -290,14 +289,12 @@ ul
 
 header
   display: flex
-  justify-content: start
   align-items: center
   margin-left: 1.5rem
 
 @media (min-width: 320px) and (max-width: 480px)
   header
     display: flex
-    justify-content: start
     align-items: center
     margin-left: 2rem
 
@@ -402,7 +399,6 @@ footer
 
 .homePageContainer
   display: flex
-  justify-content: start
   align-items: start
   height: 25rem
   animation: fadePageIn 1s forwards
@@ -448,7 +444,6 @@ footer
 
 .aboutPageContainer 
   display: flex
-  justify-content: start
   align-items: start
   flex-direction: column
   color: $white
