--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,6 @@ nav {
 
 .logoSubContainer {
   display: flex;
-  justify-content: start;
   align-items: start;
 }
 
@@ -251,7 +250,7 @@ ul {
 
 .menuToggleContainer {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: center;
   margin-right: 4.3rem;
 }
@@ -320,7 +319,6 @@ ul {
 /* Header */
 header {
   display: flex;
-  justify-content: start;
   align-items: center;
   margin-left: 1.5rem;
 }
@@ -328,7 +326,6 @@ header {
 @media (min-width: 320px) and (max-width: 480px) {
   header {
     display: flex;
-    justify-content: start;
     align-items: center;
     margin-left: 2rem;
   }
@@ -443,7 +440,6 @@ footer {
 /* Home page */
 .homePageContainer {
   display: flex;
-  justify-content: start;
   align-items: start;
   height: 25rem;
   animation: fadePageIn 1s forwards;
@@ -493,7 +489,6 @@ footer {
 /* About page */
 .aboutPageContainer {
   display: flex;
-  justify-content: start;
   align-items: start;
   flex-direction: column;
   color: #eeecec;
