--- a/src/App.sass
+++ b/src/App.sass
@@ -569,14 +569,14 @@ footer
   align-items: center
   text-align: center
   flex-direction: column
-  width: 25%
+  width: 30rem
   background-color: $dark2
   color: $white
   padding: 0
   border: solid 2px $dark
   margin: 4rem auto
 
-@media (min-width: 320px) and (max-width: 480px)
+@media (min-width: 320px) and (max-width: 767px)
   .contactContainer 
     display: flex
     justify-content: center
@@ -641,13 +641,13 @@ form h3
   padding-bottom: 0
   margin-bottom: 0.3rem
 
-.formInput 
+.formInput
   width: 100%
   padding: 0.3rem
   border: none
   margin-bottom: 1rem
 
-@media (min-width: 320px) and (max-width: 480px)
+@media (min-width: 320px) and (max-width: 767px)
   .formInput 
       width: 80%
       padding: 0.3rem
@@ -662,7 +662,7 @@ form h3
   border: none
   margin-bottom: 1rem
 
-@media (min-width: 320px) and (max-width: 480px)
+@media (min-width: 320px) and (max-width: 767px)
   .formTextarea 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
     width: 80%
@@ -684,8 +684,8 @@ form h3
     background-color: $lightGreen
 
 .errorOutput
-  padding-left: 2rem
-  padding-right: 2rem
+  text-align: center
+  width: 80%
 
 
 /* Not found page */
