--- a/src/App.css
+++ b/src/App.css
@@ -662,7 +662,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-flow: wrap;
 }
 
