--- a/src/App.sass
+++ b/src/App.sass
@@ -605,7 +605,7 @@ footer
   justify-content: center
   align-items: center
   flex:
-    direction: row
+    direction: column
     flow: wrap
 
 .contactWaysContainer div 
