--- a/src/App.sass
+++ b/src/App.sass
@@ -614,6 +614,12 @@ footer
     right: 5%
     left: 5%
 
+.contactEmailContainer
+  display: flex
+  justify-content: center
+  align-items: center
+  flex.direction: column
+
 .contactEmailContainer h3 
   margin-bottom: 0.6rem
 
