--- a/src/App.css
+++ b/src/App.css
@@ -672,6 +672,13 @@ footer {
   padding-left: 5%;
 }
 
+.contactEmailContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .contactEmailContainer h3 {
   margin-bottom: 0.6rem;
 }
