--- a/src/App.sass
+++ b/src/App.sass
@@ -618,7 +618,7 @@ footer
   display: flex
   justify-content: center
   align-items: center
-  flex.direction: column
+  flex-direction: column
 
 .contactEmailContainer h3 
   margin-bottom: 0.6rem
