contact layout debugged 1.3

--- a/src/App.css
+++ b/src/App.css
@@ -677,6 +677,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  flex-flow: wrap;
 }
 
 .contactEmailContainer h3 {
