--- a/src/App.css
+++ b/src/App.css
@@ -409,7 +409,7 @@ footer {
     margin-right: 4.2rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    flex-flow: wrap;
+    flex-wrap: wrap;
   }
 }
 
@@ -456,10 +456,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: start;
-  margin-top: 3rem;
-  margin-right: 0;
-  margin-bottom: 4rem;
-  margin-left: 4rem;
+  margin: 3rem 0 4rem 4rem;
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
@@ -467,10 +464,10 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     margin-right: 0;
     margin-bottom: 4rem;
     margin-left: 4rem;
-    flex-flow: wrap;
   }
 }
 
@@ -515,11 +512,12 @@ footer {
 
 .projectsContainer {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
   margin-top: 4rem;
   margin-bottom: 3rem;
+  margin-left: 2rem;
 }
 
 .projectDetailsContainer {
@@ -529,7 +527,7 @@ footer {
   flex-direction: column;
   background-color: #0f0f0f;
   border: solid 1px #282828;
-  margin: 0 1.5rem 0.5rem 1.5rem;
+  margin: 0.7rem 1.5rem 0.7rem 1.5rem;
 }
 
 .projectDescription {
@@ -544,15 +542,15 @@ footer {
 }
 
 .projectDescription p {
-  width: 20rem;
   font-size: 1rem;
+  width: 20rem;
 }
 
 .projectLinksContainer {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-flow: wrap;
+  flex-wrap: wrap;
   margin-top: 0;
   margin-bottom: 1.5rem;
   padding-bottom: 1.5rem;
@@ -622,8 +620,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   flex-direction: column;
+  text-align: center;
   width: 30rem;
   background-color: #0f0f0f;
   color: #eeecec;
@@ -637,8 +635,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
     flex-direction: column;
+    text-align: center;
     width: 66%;
     background-color: #0f0f0f;
     color: #eeecec;
@@ -663,7 +661,6 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  flex-flow: wrap;
 }
 
 .contactWaysContainer div {
@@ -677,7 +674,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  flex-flow: wrap;
+  flex-wrap: wrap;
 }
 
 .contactEmailContainer h3 {
@@ -687,6 +684,14 @@ footer {
 .contactEmailContainer h4 {
   margin-top: 0rem;
   margin-bottom: 0.7rem;
+}
+
+.contactPhoneContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .contactPhoneContainer h3 {
@@ -706,6 +711,13 @@ footer {
 
 .contactLink a:hover {
   color: #7eacfc;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 form h3 {
