--- a/src/App.sass
+++ b/src/App.sass
@@ -371,7 +371,7 @@ footer
     padding:
       top: 0.5rem
       bottom: 0.5rem
-    flex-flow: wrap
+    flex-wrap: wrap
 
 .copyrightText
   font-size: 1rem
@@ -413,23 +413,19 @@ footer
   display: flex
   justify-content: center
   align-items: start
-  margin:
-    top: 3rem
-    right: 0
-    bottom: 4rem
-    left: 4rem
+  margin: 3rem 0 4rem 4rem
 
 @media (min-width: 320px) and (max-width: 767px)
   .textContainer
     display: flex
     justify-content: center
     align-items: center
+    flex-wrap: wrap
     margin:
       right: 0
       bottom: 4rem
       left: 4rem
-    flex-flow: wrap
-
+    
 .textColumContainer
   width: 50%
   padding-right: 5rem
@@ -467,12 +463,13 @@ footer
 
 .projectsContainer
   display: flex
-  justify-content: center
+  justify-content: space-around
   align-items: center
   flex-wrap: wrap
   margin:
     top: 4rem
     bottom: 3rem
+    left: 2rem
 
 .projectDetailsContainer 
   display: flex
@@ -481,7 +478,7 @@ footer
   flex-direction: column
   background-color: $dark2
   border: solid 1px $dark
-  margin: 0 1.5rem 0.5rem 1.5rem
+  margin: 0.7rem 1.5rem 0.7rem 1.5rem
 
 .projectDescription
   color: $white
@@ -494,14 +491,14 @@ footer
   margin: 1.6rem 0 0.6rem 0
 
 .projectDescription p
-  width: 20rem
   font-size: 1rem
+  width: 20rem
 
 .projectLinksContainer 
   display: flex
   justify-content: space-around
   align-items: center
-  flex-flow: wrap
+  flex-wrap: wrap
   margin:
     top: 0
     bottom: 1.5rem
@@ -567,8 +564,8 @@ footer
   display: flex
   justify-content: center
   align-items: center
-  text-align: center
   flex-direction: column
+  text-align: center
   width: 30rem
   background-color: $dark2
   color: $white
@@ -581,8 +578,8 @@ footer
     display: flex
     justify-content: center
     align-items: center
-    text-align: center
     flex-direction: column
+    text-align: center
     width: 66%
     background-color: $dark2
     color: $white
@@ -604,9 +601,7 @@ footer
   display: flex
   justify-content: center
   align-items: center
-  flex:
-    direction: column
-    flow: wrap
+  flex-direction: column
 
 .contactWaysContainer div 
   padding:
@@ -620,7 +615,7 @@ footer
   align-items: center
   flex:
     direction: column
-    flow: wrap
+    wrap: wrap
 
 .contactEmailContainer h3 
   margin-bottom: 0.6rem
@@ -629,6 +624,14 @@ footer
   margin:
     top: 0rem
     bottom: 0.7rem
+
+.contactPhoneContainer
+  display: flex
+  justify-content: center
+  align-items: center
+  flex:
+    direction: column
+    wrap: wrap
 
 .contactPhoneContainer h3 
   margin-bottom: 0.6rem
@@ -644,6 +647,12 @@ footer
   transition: all 0.5s
   &:hover 
     color: $lightBlue
+
+form
+  display: flex
+  justify-content: center
+  align-items: center
+  flex-direction: column
 
 form h3 
   padding-bottom: 0
