--- a/src/App.css
+++ b/src/App.css
@@ -428,7 +428,7 @@ footer {
 .footerLink {
   background-color: black;
   color: #eeecec;
-  padding: 0.01rem 0.3rem 0.1rem 0.3rem;
+  padding: 0.1rem 0.3rem;
   margin-left: 1rem;
   margin-right: 1rem;
 }
@@ -517,7 +517,7 @@ footer {
   flex-wrap: wrap;
   margin-top: 4rem;
   margin-bottom: 3rem;
-  margin-left: 2rem;
+  margin-left: 0;
 }
 
 .projectDetailsContainer {
@@ -527,7 +527,7 @@ footer {
   flex-direction: column;
   background-color: #0f0f0f;
   border: solid 1px #282828;
-  margin: 0.7rem 1.5rem 0.7rem 1.5rem;
+  margin: 0 1.5rem 1rem 1.5rem;
 }
 
 .projectDescription {
