--- a/src/App.sass
+++ b/src/App.sass
@@ -386,7 +386,7 @@ footer
 .footerLink
   background-color: black
   color: $white
-  padding: 0.01rem 0.3rem 0.1rem 0.3rem
+  padding: 0.1rem 0.3rem
   margin:
     left: 1rem
     right: 1rem
@@ -469,7 +469,7 @@ footer
   margin:
     top: 4rem
     bottom: 3rem
-    left: 2rem
+    left: 0
 
 .projectDetailsContainer 
   display: flex
@@ -478,7 +478,7 @@ footer
   flex-direction: column
   background-color: $dark2
   border: solid 1px $dark
-  margin: 0.7rem 1.5rem 0.7rem 1.5rem
+  margin: 0 1.5rem 1rem 1.5rem
 
 .projectDescription
   color: $white
