--- a/src/App.sass
+++ b/src/App.sass
@@ -403,7 +403,10 @@ footer
   height: 25rem
   animation: fadePageIn 1s forwards
   color: $white
-  margin-top: 8rem
+  margin:
+    top: 8rem
+    bottom: 8rem
+  
 
 .doubleArrowRight
   color: orange
