transparent navbar effect added

--- a/src/App.css
+++ b/src/App.css
@@ -92,8 +92,9 @@ nav {
   left: 0;
   right: 0;
   z-index: 1030;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   color: #eeecec;
+  backdrop-filter: blur(10px);
 }
 
 .navbarContainer {
@@ -198,7 +199,7 @@ nav {
   font-size: 1rem;
   display: inline-block;
   text-decoration: none;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   color: #eeecec;
   padding: 0.3rem 0.8rem;
   margin-left: 0.8rem;
