--- a/src/App.sass
+++ b/src/App.sass
@@ -90,8 +90,9 @@ nav
   left: 0
   right: 0
   z-index: 1030
-  background-color: black
+  background-color: rgba(0,0,0,0.5)
   color: $white
+  backdrop-filter: blur(10px);
     
 .navbarContainer
   display: flex
@@ -188,7 +189,7 @@ nav
   font-size: 1rem
   display: inline-block
   text-decoration: none
-  background-color: black
+  background-color: rgba(0,0,0,0)
   color: $white
   padding: 0.3rem 0.8rem
   margin-left: 0.8rem
