--- a/src/App.sass
+++ b/src/App.sass
@@ -92,7 +92,7 @@ nav
   z-index: 1030
   background-color: rgba(0,0,0,0.6)
   color: $white
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px)
     
 .navbarContainer
   display: flex
@@ -118,18 +118,21 @@ nav
 .logoSubContainer
   display: flex
   align-items: start
+  background-color: $white
+  padding: 0.3rem
+  border-radius: 16px
 
 .logoLetterOutlineC
   width: 1.5rem
   height: 2rem
-  background-color: $white
+  background-color: black
   border-radius: 50% 0 0 50%
   margin-right: 0.5rem
 
 .logoLetterInlineC
   width: 1.2rem
   height: 1.4rem
-  background-color: black
+  background: $white
   padding: 0
   margin:
     top: 0.3rem
@@ -139,13 +142,13 @@ nav
 .logoLetterOutlineG
   width: 1.5rem
   height: 2rem
-  background-color: $white
+  background-color: black
   border-radius: 0 50% 50% 0
 
 .logoLetterInlineG
   width: 1.2rem
   height: 1.4rem
-  background-color: black
+  background-color: $white
   padding: 0
 
   margin:
@@ -157,14 +160,14 @@ nav
 .logoLetterBoxG
   width: 0.3rem
   height: 0.7rem
-  background-color: black
+  background-color: $white
   margin-bottom: 0
   padding-top: 0.7rem
 
 .logoLetterBoxG2
   width: 0.3rem
   height: 0.3rem
-  background-color: $white
+  background-color: black
   padding-top: 0.7rem
 
 .navigationContainer
@@ -219,8 +222,8 @@ ul
   z-index: 1050
   background-color: black
   color: $white
-  background: rgba(0, 0, 0, 0.6)
-  backdrop-filter: blur(15px);
+  background-color: rgba(0, 0, 0, 0.6)
+  backdrop-filter: blur(15px)
   
 .fadeMenuIn
   animation: fadePageIn 1s forwards
@@ -462,7 +465,7 @@ footer
 /* Projects page */
 
 .projectsPageContainer 
-  color: white
+  color: $white
   margin-top: 8rem
   animation: fadePageIn 1s forwards
 
