--- a/src/App.css
+++ b/src/App.css
@@ -121,12 +121,15 @@ nav {
 .logoSubContainer {
   display: flex;
   align-items: start;
+  background-color: #eeecec;
+  padding: 0.3rem;
+  border-radius: 16px;
 }
 
 .logoLetterOutlineC {
   width: 1.5rem;
   height: 2rem;
-  background-color: #eeecec;
+  background-color: black;
   border-radius: 50% 0 0 50%;
   margin-right: 0.5rem;
 }
@@ -134,7 +137,7 @@ nav {
 .logoLetterInlineC {
   width: 1.2rem;
   height: 1.4rem;
-  background-color: black;
+  background: #eeecec;
   padding: 0;
   margin-top: 0.3rem;
   margin-left: 0.3rem;
@@ -144,14 +147,14 @@ nav {
 .logoLetterOutlineG {
   width: 1.5rem;
   height: 2rem;
-  background-color: #eeecec;
+  background-color: black;
   border-radius: 0 50% 50% 0;
 }
 
 .logoLetterInlineG {
   width: 1.2rem;
   height: 1.4rem;
-  background-color: black;
+  background-color: #eeecec;
   padding: 0;
   margin-top: 0.3rem;
   margin-right: 0.5rem;
@@ -162,7 +165,7 @@ nav {
 .logoLetterBoxG {
   width: 0.3rem;
   height: 0.7rem;
-  background-color: black;
+  background-color: #eeecec;
   margin-bottom: 0;
   padding-top: 0.7rem;
 }
@@ -170,7 +173,7 @@ nav {
 .logoLetterBoxG2 {
   width: 0.3rem;
   height: 0.3rem;
-  background-color: #eeecec;
+  background-color: black;
   padding-top: 0.7rem;
 }
 
@@ -232,7 +235,7 @@ ul {
   z-index: 1050;
   background-color: black;
   color: #eeecec;
-  background: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(15px);
 }
 
@@ -508,7 +511,7 @@ footer {
 
 /* Projects page */
 .projectsPageContainer {
-  color: white;
+  color: #eeecec;
   margin-top: 8rem;
   animation: fadePageIn 1s forwards;
 }
