--- a/src/App.sass
+++ b/src/App.sass
@@ -81,6 +81,12 @@ body
   to
     font-size: 0
 
+@keyframes blurrElementIn
+  from
+    filter: blur(100px)
+  to
+    filter: blur(0px)
+    
 
 /* Navigation Bar */
 
@@ -120,14 +126,14 @@ nav
   align-items: start
   background-color: $white
   padding: 0.3rem
-  border-radius: 16px
+  border-radius: 5px
 
 .logoLetterOutlineC
   width: 1.5rem
   height: 2rem
   background-color: black
   border-radius: 50% 0 0 50%
-  margin-right: 0.5rem
+  margin-right: 0.4rem
 
 .logoLetterInlineC
   width: 1.2rem
@@ -150,7 +156,6 @@ nav
   height: 1.4rem
   background-color: $white
   padding: 0
-
   margin:
     top: 0.3rem
     right: 0.5rem
@@ -289,6 +294,9 @@ ul
 .menuLinkFadeOutSpeed5
   animation: fadeTextOut 1s forwards
 
+.blurrIn
+  animation: blurrElementIn 1.5s forwards
+
 
 /* Header */
 
@@ -322,18 +330,15 @@ header
     padding-top: 1rem
     padding-bottom: 1.7rem
     padding-left: 1rem
-    margin-left: 0
+    margin-left: 2rem
 
 .headerText h1
-  padding-top: 0
   margin-top: 0
-  margin-bottom: 1rem
+  margin-bottom: 0.5rem
 
 .headerText h2
-  padding-top: 0
   margin-top: 0
   margin-bottom: 0
-  padding-bottom: 0
 
 .blueBorder
   border-left: solid $blue2 10px
@@ -401,13 +406,91 @@ footer
 
 .homePageContainer
   display: flex
-  align-items: start
+  justify-content: center
+  align-items: center
+  flex-wrap: wrap
   height: 25rem
   animation: fadePageIn 1s forwards
   color: $white
   margin:
     top: 8rem
     bottom: 8rem
+
+.homeIntroText
+  margin-left: 4rem
+
+.homeIntroText h1
+  margin-top: 0
+  margin-bottom: 0.5rem
+
+.homeIntroText h2
+  margin-top: 0
+  margin-bottom: 0.5rem
+
+.homeLogoSubContainer
+  display: flex
+  align-items: start
+  background-color: $white
+  padding: 1rem
+  border-radius: 20px
+
+.homeLogoLetterOutlineC
+  width: 6rem
+  height: 8rem
+  background-color: black
+  border-radius: 50% 0 0 50%
+  margin-right: 1.6rem
+
+.homeLogoLetterInlineC
+  width: 4.8rem
+  height: 5.6rem
+  background: $white
+  padding: 0
+  margin:
+    top: 1.2rem
+    left: 1.2rem
+  border-radius: 50% 0 0 50%
+
+.homeLogoLetterOutlineG
+  width: 6rem
+  height: 8rem
+  background-color: black
+  border-radius: 0 50% 50% 0
+
+.homeLogoLetterInlineG
+  width: 4.8rem
+  height: 5.6rem
+  background-color: $white
+  padding: 0
+  margin:
+    top: 1.2rem
+    right: 2rem
+    left: 0
+  border-radius: 0 50% 50% 0
+
+.homeLogoLetterBoxG
+  width: 1.2rem
+  height: 2.8rem
+  background-color: $white
+  margin-bottom: 0
+  padding-top: 2.8rem
+
+.homeLogoLetterBoxG2
+  width: 1.2rem
+  height: 1.2rem
+  background-color: black
+  padding-top: 2.8rem
+
+
+/* About page */
+
+.aboutPageContainer 
+  display: flex
+  align-items: start
+  flex-direction: column
+  color: $white
+  margin-top: 8rem
+  animation: fadePageIn 1s forwards
 
 .textContainer
   display: flex
@@ -434,17 +517,6 @@ footer
   .textColumContainer
     width: 100%
     padding-right: 3rem
-
-
-/* About page */
-
-.aboutPageContainer 
-  display: flex
-  align-items: start
-  flex-direction: column
-  color: $white
-  margin-top: 8rem
-  animation: fadePageIn 1s forwards
 
 .aboutContactLink a 
   text-decoration: none
