--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ nav {
   left: 0;
   right: 0;
   z-index: 1030;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
   color: #eeecec;
   backdrop-filter: blur(15px);
 }
@@ -244,7 +244,7 @@ ul {
   z-index: 1050;
   background-color: black;
   color: #eeecec;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(15px);
 }
 
@@ -262,14 +262,14 @@ ul {
   align-items: center;
 }
 
-.menuToggleContainer {
+.menuCloseContainer {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   margin-right: 4.3rem;
 }
 
-.menuToggle {
+.menuClose {
   margin-top: 2.5rem;
 }
 
