--- a/src/App.sass
+++ b/src/App.sass
@@ -96,7 +96,7 @@ nav
   left: 0
   right: 0
   z-index: 1030
-  background-color: rgba(0,0,0,0.6)
+  background-color: rgba(0,0,0,0.7)
   color: $white
   backdrop-filter: blur(15px)
     
@@ -227,7 +227,7 @@ ul
   z-index: 1050
   background-color: black
   color: $white
-  background-color: rgba(0, 0, 0, 0.6)
+  background-color: rgba(0, 0, 0, 0.7)
   backdrop-filter: blur(15px)
   
 .fadeMenuIn
@@ -241,13 +241,13 @@ ul
   justify-content: center
   align-items: center
 
-.menuToggleContainer
+.menuCloseContainer
   display: flex
   justify-content: flex-end
   align-items: center
   margin-right: 4.3rem
 
-.menuToggle
+.menuClose
   margin-top: 2.5rem
 
 .menuSubContainer
