--- a/src/App.sass
+++ b/src/App.sass
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@200;300&display=swap")
 
-$white: rgb(238,	236,	236)
+$white: rgb(238, 236, 236)
 $dark: rgb(40,40,40)
 $lightGreen: rgb(50, 168, 82)
 $blue: rgb(50, 113, 168)
@@ -743,11 +743,7 @@ form
   align-items: center
   background-color: $dark2
   border: solid $dark 1px
-  margin:
-    top: 4rem
-    right: 4rem
-    bottom: 4rem
-    left: 4rem
+  margin: 4rem
 
 .notFoundGetBackLink 
   display: inline-block
