--- a/src/App.sass
+++ b/src/App.sass
@@ -4,7 +4,7 @@ $white: rgb(238, 236, 236)
 $dark: rgb(40,40,40)
 $lightGreen: rgb(50, 168, 82)
 $blue: rgb(50, 113, 168)
-$blue2: rgb(80, 143, 208)
+$blue2: rgb(31,	111,225)
 $lightBlue: rgb(126, 172, 252)
 $lightGrey: rgb(84,84, 84)
 $dark2: rgb(15,15,15)
