--- a/src/App.css
+++ b/src/App.css
@@ -347,14 +347,14 @@ ul {
 }
 
 /* Header */
-header {
+.headline {
   display: flex;
   align-items: center;
   margin-left: 1.5rem;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-  header {
+  .headline {
     margin-left: 2rem;
     margin-right: 3rem;
   }
@@ -609,14 +609,14 @@ footer {
   padding-right: 1rem;
 }
 
-.projectDescription h2 {
-  font-size: 1.7rem;
-  margin: 1.6rem 0 0.6rem 0;
-}
-
-.projectDescription p {
+.projectDescription article p {
   font-size: 1rem;
   width: 280px;
+}
+
+.projectDescription article header h2 {
+  font-size: 1.7rem;
+  margin: 1.6rem 0 0.6rem 0;
 }
 
 .projectLinksContainer {
