--- a/src/App.sass
+++ b/src/App.sass
@@ -539,6 +539,10 @@ footer
         font-size: 1.7rem 
         margin: 1.6rem 0 0.6rem 0
 
+.descriptionContainer
+  p
+    margin-bottom: 2.5rem
+
 .projectLinksContainer 
   display: flex
   justify-content: space-around
