--- a/src/App.css
+++ b/src/App.css
@@ -660,7 +660,7 @@ footer {
 
 .techStackLogosContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   background-color: #eeecec;
