--- a/src/App.sass
+++ b/src/App.sass
@@ -591,7 +591,7 @@ footer
 
 .techStackLogosContainer
   display: flex
-  justify-content: space-around
+  justify-content: center
   align-items: center
   flex-wrap: wrap
   background-color: $white
